@@ -66,6 +66,8 @@ bind "t"                 new_timed
 bind "u"                 new_untimed
 bind "n"                 search_next
 bind "/"                 begin_search
+bind "r"                 view_remind
+bind "R"                 view_remind_all
 bind "Q"                 quit
 
 bind "<return>"          entry_complete
